--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "express-oauth2-jwt-bearer": "^1.4.1",
+    "jwks-rsa": "^3.0.1",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
