--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +14,11 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-oauth2-jwt-bearer": "^1.4.1",
+    "helmet": "^6.1.5",
     "jwks-rsa": "^3.0.1",
     "mongodb": "^5.2.0",
-    "mongoose": "^7.0.3",
+    "mongoose": "^7.0.4",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
   }
