--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-oauth2-jwt-bearer": "^1.4.1",
     "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
